Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129375

[REG 6.5.1 -> 6.7.2|6.8.0-rc1] Common Trace Format (CTF) backend causes application crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.8.1, 6.9.0 FF
    • 6.7.2, 6.8.0 RC, 6.8
    • Core: Plugins
    • None
    • Linux/X11
    • a599838f7 (dev), cf92f38bb (6.8)

    Description

      Feature was added in 6.5.0 and it seems that it only has ever worked on that release and 6.5.1 (have not checked/verified 6.6.x as it EOL already). 

      Change https://codereview.qt-project.org/c/qt/qtbase/+/481139 causes build error on 6.5.2 - 6.5.6 as QQUid::toBytes function was only introduced on 6.6.

      When enabling tracing it will cause instant crash of application with 6.7.2 and 6.8.0-rc1

      On linux following fixes crash

      diff --git a/src/plugins/tracing/qctflib.cpp b/src/plugins/tracing/qctflib.cpp
      index fe3946d27c..b5b988b8ab 100644
      --- a/src/plugins/tracing/qctflib.cpp
      +++ b/src/plugins/tracing/qctflib.cpp
      @@ -186,7 +186,7 @@ QCtfLibImpl::QCtfLibImpl()
      
       void QCtfLibImpl::clearLocation()
       {
       #if QT_CONFIG(cxx17_filesystem)
      -    const std::filesystem::path location{qUtf16Printable(m_location)};
      +    const std::filesystem::path location{m_location.toStdU16String()};
           for (auto const& dirEntry : std::filesystem::directory_iterator{location})
           {
               const auto path = dirEntry.path();
      
      
      

      Attachments

        For Gerrit Dashboard: QTBUG-129375
        # Subject Branch Project Status CR V

        Activity

          People

            anmaatta Antti Määttä
            papetaja Pasi Petäjäjärvi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes