Use toStdU16String when converting string to std::filesystem::path

qUtf16Printable causes a crash in linux.

Pick-to: 6.8.0 6.8 6.7
Fixes: QTBUG-129375
Change-Id: Icb0aed74e0a2af762aee464d52a63e0f847b85a9
Reviewed-by: Pasi Petäjäjärvi <pasi.petajajarvi@qt.io>